@@ -1608,6 +1608,7 @@ namespace libtorrent
 								test_error(j);
 								break;
 							}
+							break;
 						}
 					}
 					// we've now inserted the buffer
